--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,9 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
+body{
+    background: linear-gradient(to right bottom, rgb(255, 130, 130), rgb(255, 190, 106));
+}
 a{
     text-decoration: none;
 }
@@ -463,7 +465,7 @@ h3{
 */
 .last-section{
     padding-top: 100px ;
-    background: #F4F4F4F4;
+    background: rgb(216, 208, 208); 
     text-align: center;
 }
 .footer-logo{
@@ -503,7 +505,7 @@ h3{
 }
 
 footer{
-    background: #f5f5f5f5;
+    background: rgb(216, 208, 208); 
     
 }
 footer hr{
