--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,6 +519,28 @@ footer .container{
     align-items: center;
 }
 
+/* Go UP button */
+.go-up{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: rgb(241, 111, 111);
+    color: #f8f9fa;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 7%;
+    right: 5%;
+    z-index: 22;
+    display: none;
+    transition: all .4s;
+}
+.go-up:hover{
+    transform: scale(1.2);
+    font-size: 20px;
+}
+
 
 @media (max-width: 960px){
 
