--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+html{scroll-behavior: smooth} 
+
 body{
     background: linear-gradient(to right bottom, rgb(255, 130, 130), rgb(255, 190, 106));
 }
